# tix

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  INTERNALS.md  Notes.md  README.md  SESSION.md  TODO.md  Tasks.md  cov.sh  default.nix  flake.nix  justfile  lsp-dev.nix  overlay.nix  pbt.sh  repo-check.toml  rust-toolchain.toml  rust.nix  stubs.nix  tix.toml  tixc.sh  vscode.nix
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
TODO/: Tasks.md  check_findings.md  lsp.md  lsp_test.md  out_arena.md  performance.md  reduce_mem.md  source-loc.md  stubs-and-dx.md  testing.md  type-system-design.md
backlog/: config.yml
backlog/completed/: task-021 - PBT-generate-union-intersection-types-and-expand-OutputTy-Arbitrary.md
backlog/drafts/: draft-001 - Recursive-function-narrowing-produces-false-positives.md  draft-002 - Intersection-annotation-body-verification.md  draft-003 - Literal-singleton-types-for-discriminated-unions.md  draft-004 - Model-Nix-overlays-in-the-type-system.md  draft-005 - Model-NixOS-module-system-options-config-duality.md  draft-006 - Resolve-angle-bracket-imports-nixpkgs.md  draft-007 - External-flake-input-typing-shared-stub-ecosystem.md  draft-008 - Parameterized-type-aliases-in-.tix-files.md  draft-009 - Multi-key-attrpath-narrowing.md  draft-010 - Else-branch-narrowing-for-compound-types-isAttrs-isList-isFunction.md  draft-011 - Co-occurrence-simplification-SimpleSub-§4.2.md  draft-012 - Intersection-type-based-operator-overloading.md
backlog/tasks/: task-001 - Union-constraint-snapshot-rollback-for-correct-union-subtyping.md  task-002 - Fix-resolve_to_concrete_id-picking-arbitrary-lower-bound.md  task-003 - Null-default-field-loses-polymorphic-return-type.md  task-004 - Carry-merge-constraints-across-SCC-group-boundaries.md  task-005 - Fix-chained-null-guard-narrowing-error.md  task-006 - Overloaded-operators-dont-survive-file-boundaries.md  task-007 - LSP-Nested-arg-autocomplete-doesnt-work.md  task-008 - LSP-Dot-autocomplete-sometimes-requires-CtrlSpace.md  task-009 - LSP-did_change_configuration-bypasses-DashMap-snapshots.md  task-010 - LSP-Hover-on-multi-element-attrpaths-shows-wrong-type.md  task-011 - Investigate-tower-lsp-transport-crash.md  task-012 - LSP-concurrency-clean-up-legacy-state-paths.md  task-013 - Reduce-allocations-in-hot-path-constraint-propagation.md  task-014 - Make-narrowing-guard-list-extensible-via-stubs.md  task-015 - Improve-nixpkgs-lib-stub-coverage.md  task-016 - Stub-generator-fix-tryEval-failures-and-namespace-doc-comments.md  (+11 more)
crates/cli/: Cargo.toml
crates/cli/src/: check.rs  config.rs  gen_stubs.rs  init.rs  json_output.rs  main.rs  timing.rs
crates/cli/tests/: env_stubs.rs  nixpkgs_lib.rs
crates/comment_parser/: Cargo.toml
crates/lang/: Cargo.toml
crates/lang/proptest-regressions/ty/check/pbt/: mod.txt
crates/lang/src/: ast_utils.rs  collect.rs  comment.rs  db.rs  generate.rs  group_def.rs  infer.rs  lib.rs  lower.rs  mod.rs  nameres.rs  solve.rs  tests.rs
crates/lang/src/pbt/: mod.rs
crates/lang/src/ty/: attrset.rs  check.rs  infer.rs  mod.rs  primitive.rs  union.rs  union_find.rs
crates/lang/src/ty/check/: collect.rs  constraints.rs  generate.rs  infer.rs  mod.rs  solve.rs  storage.rs  tests.rs
crates/lang/src/ty/check/pbt/: arbitrary.rs  mod.rs
crates/lang_ast/: Cargo.toml
crates/lang_ast/src/: arbitrary.rs  ast_utils.rs  classify.rs  comment.rs  db.rs  lib.rs  lower.rs  nameres.rs  narrow.rs  tests.rs
crates/lang_check/: Cargo.toml
crates/lang_check/proptest-regressions/pbt/: mod.txt  stub_compose.txt
crates/lang_check/src/: aliases.rs  builtins.rs  collect.rs  constrain.rs  constraints.rs  coordinator.rs  diagnostic.rs  file_graph.rs  generate.rs  imports.rs  infer.rs  infer_expr.rs  lib.rs  narrow.rs  operators.rs  parallel_imports.rs  salsa_imports.rs  solve.rs  storage.rs  tests.rs  type_table.rs
crates/lang_check/src/pbt/: frozen.rs  mod.rs  partial.rs  stub_compose.rs  type_ops.rs
crates/lang_ty/: Cargo.toml
crates/lang_ty/src/: arbitrary.rs  arc_ty.rs  arena.rs  attrset.rs  disjoint.rs  lib.rs  primitive.rs  simplify.rs  union.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_actions.rs  completion.rs  config.rs  convert.rs  diagnostics.rs  document_highlight.rs  document_link.rs  document_symbol.rs  formatting.rs  goto_def.rs  hover.rs  inlay_hint.rs  lib.rs  main.rs  pbt.rs  project_config.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  server.rs  signature_help.rs  state.rs  store_stubs.rs  test_util.rs  ty_nav.rs  type_def.rs  warmup.rs  workspace_symbols.rs
crates/lsp/tests/: e2e_background_analysis.rs  e2e_code_actions.rs  e2e_completion.rs  e2e_config.rs  e2e_diagnostics.rs  e2e_document_highlight.rs  e2e_document_links.rs  e2e_document_symbols.rs  e2e_formatting.rs  e2e_goto_def.rs  e2e_goto_type_def.rs  e2e_hover.rs  e2e_inlay_hints.rs  e2e_lifecycle.rs  e2e_multi_file.rs  e2e_nixpkgs.rs  e2e_references.rs  e2e_rename.rs  e2e_selection_range.rs  e2e_semantic_tokens.rs  e2e_signature_help.rs  e2e_workspace_symbols.rs
crates/lsp/tests/common/: mod.rs
crates/repo_check/: Cargo.toml
crates/repo_check/src/: diff.rs  git.rs  main.rs  manifest.rs  results.rs  runner.rs  tix.rs
docs/: book.toml
nix/: generate-stubs-runtime.nix  lsp-dev.nix  lsp-local.nix  overlay.nix  rust.nix  scripts.nix  stubs.nix  vscode.nix
scripts/: gen_lib_stubs.py  nixpkgs-lib-test.sh  nixpkgs-test.sh  pbt.sh  tixc.sh
src/: comment.rs  expr.rs  main.rs  symbols.rs
src-old/: main.rs  nix_file.rs
stubs/: lib.tix
test/: alpha_equiv_union.nix  basic.nix  basic_let.nix  fix.nix  hasattr_narrowing.nix  ignore.nix  inherit_from.nix  jump.nix  merge.nix  mutual.nix  nesting.nix  nixos_inline.nix  nixos_module.nix  nocheck.nix  null_default.nix  overload.nix  rec.nix  rec_fun.nix  recursion.nix  row_poly.nix  row_poly_deeper.nix  scratch.nix  shell_scripts.nix  simple.nix  strings.nix  stubs_test.nix  tix.toml  type_error.nix  union_if_else.nix
todo/: bugs.md  lsp.md  phase-4b-partial-inference.md  testing.md
tools/: extract-options.nix
(+65 files in other folders)
