
[package]
name = "cli"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.2", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
lang_ast = { path = "../lang_ast" }
lang_check = { path = "../lang_check" }
lang_ty = { path = "../lang_ty" }
comment_parser = { path = "../comment_parser" }
rnix = { workspace = true }
rowan = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }


[[bin]]
name = "tix-cli"
path = "src/main.rs"
