[package]
name = "lang"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
# id-arena = "2.2.1"
ordered-float = "4.6.0"
# TODO: 11.1 is on github as of 12-19-24 but not released. Only added pipe operators
rnix = "0.11.0"
# TODO: same as rnix, not sure if we need copying from nixdoc for now
rowan = "0.15"
smol_str = "0.3.2"
thiserror = { workspace = true }
miette = { workspace = true }


# TODO: lock to a commit...
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "88a1d7774d78f048fbd77d40abca9ebd729fd1f0" }
dashmap = "6.1.0"
petgraph = "0.7.0"
la-arena = "0.3.1"
ena = "0.14.3"
itertools = "0.14.0"
derive_more = { version = "1.0.0", features = ["debug"] }
indoc = "2.0.5"

[lib]
path = "src/lib.rs"
