[package]
name = "lang"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.2", features = ["derive"] }
# id-arena = "2.2.1"
ordered-float = "4.6.0"
# TODO: 11.1 is on github as of 12-19-24 but not released. Only added pipe operators
rnix = "0.11.0"
# TODO: same as rnix, not sure if we need copying from nixdoc for now
rowan = "0.15"
smol_str = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
la-arena = { workspace = true }
derive_more = { workspace = true, features = ["debug", "from"] }
log = { workspace = true }

salsa = { git = "https://github.com/salsa-rs/salsa", rev = "88a1d7774d78f048fbd77d40abca9ebd729fd1f0" }
dashmap = "6.1.0"
petgraph = "0.7.0"
# ena = "0.14.3"
itertools = "0.14.0"
indoc = "2.0.5"
union-find = "0.4.3"


[dev-dependencies]
proptest = { workspace = true }

[lib]
path = "src/lib.rs"
