[package]
name = "lang"
version = "0.1.0"
edition = "2021"


[dependencies]
lang_ast = { path = "../lang_ast" }

smol_str = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
la-arena = { workspace = true }
derive_more = { workspace = true, features = ["debug", "from"] }
log = { workspace = true }

salsa = { workspace = true }
dashmap = "6.1.0"
petgraph = "0.7.0"
# ena = "0.14.3"
itertools = "0.14.0"
indoc = "2.0.5"
rustc-hash = "2.1.0"
union-find = "0.4.3"


[dev-dependencies]
proptest = { workspace = true }

[lib]
path = "src/lib.rs"
