[package]
name = "lang_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
la-arena = { workspace = true }
derive_more = { workspace = true, features = ["debug", "from"] }
log = { workspace = true }
salsa = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
miette = { workspace = true }
rnix = { workspace = true }
rowan = { workspace = true }

dashmap = "6.1.0"
ordered-float = "4.6.0"


proptest = { workspace = true, optional = true }


[dev-dependencies]
proptest = { workspace = true }

[features]
proptest_support = ["dep:proptest"]
