[package]
name = "lang_check"
version = "0.1.0"
edition = "2021"


[dependencies]
lang_ast = { path = "../lang_ast" }
lang_ty = { path = "../lang_ty" }
comment_parser = { path = "../comment_parser" }

smol_str = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
la-arena = { workspace = true }
derive_more = { workspace = true, features = ["debug", "from"] }
log = { workspace = true }
# TODO: replace refs to this with my own type
rnix = { workspace = true }

salsa = { workspace = true }
dashmap = "6.1.0"
itertools = "0.14.0"
indoc = "2.0.5"
rustc-hash = "2.1.0"
stacker = "0.1"


[dev-dependencies]
proptest = { workspace = true }
lang_ast = { path = "../lang_ast", features = ["proptest_support"] }
lang_ty = { path = "../lang_ty", features = ["proptest_support"] }


[lib]
path = "src/lib.rs"
