[package]
name = "lang_ty"
version = "0.1.0"
edition = "2021"

[dependencies]
lang_ast = { path = "../lang_ast" }
derive_more = { workspace = true, features = ["debug", "from"] }
log = { workspace = true }
smol_str = { workspace = true }
rustc-hash = { workspace = true }
stacker = "0.1"

proptest = { workspace = true, optional = true }


[dev-dependencies]
proptest = { workspace = true }

[features]
proptest_support = ["dep:proptest"]
