[package]
name = "tix-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lang_ast = { path = "../lang_ast" }
lang_check = { path = "../lang_check" }
lang_ty = { path = "../lang_ty" }
comment_parser = { path = "../comment_parser" }

tower-lsp = { workspace = true }
tokio = { workspace = true }
rnix = { workspace = true }
rowan = { workspace = true }
smol_str = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
clap = { version = "4.2", features = ["derive"] }
env_logger = "0.11"
toml = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
indoc = "2.0.5"
proptest = { workspace = true }
tempfile = "3"

[[bin]]
name = "tix-lsp"
path = "src/main.rs"
